--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "request-ip": "^3.3.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -39,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/request-ip": "^0.0.41",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
