--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-loader-spinner": "^6.1.6",
     "request-ip": "^3.3.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
