--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
-    "react-loader-spinner": "^6.1.6",
+    "react-spinners": "^0.15.0",
     "request-ip": "^3.3.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
