--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@tanstack/react-query": "^5.67.2",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
+    "clipboard-copy": "^4.0.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
-    "motion": "^12.4.7",
+    "motion": "^12.5.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
