--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.67.2",
+    "@vercel/og": "^0.6.5",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clipboard-copy": "^4.0.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "motion": "^12.5.0",
-    "next": "15.1.7",
+    "next": "^15.2.4",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
