--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.67.2",
+    "@upstash/redis": "^1.34.8",
     "@vercel/og": "^0.6.5",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clipboard-copy": "^4.0.1",
     "clsx": "^2.1.1",
+    "i18n-iso-countries": "^7.14.0",
     "lucide-react": "^0.475.0",
     "motion": "^12.6.3",
     "next": "^15.2.4",
