--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clipboard-copy": "^4.0.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "i18n-iso-countries": "^7.14.0",
     "lucide-react": "^0.475.0",
     "motion": "^12.6.3",
     "next": "^15.2.4",
+    "next-cloudinary": "^6.16.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.4",
     "nextjs-google-analytics": "^2.3.7",
